updated some project URLs and fixed an issue with some overlapping on mobile views.

--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,7 @@ footer {
 .btn {
   transition: background-color 300ms ease-out;
 }
+
+h4 {
+  line-height: 30px;
+}
